# charon_opencl

./: .gitignore  .travis.yml  CMakeLists.txt  ProjectDeps.cmake  README.md  paraview.pvsm
benchResults/: 20190104-004546.json  20190105-095107.json  20190106-020630.json  20190111-175546.json  20190128-162022-augmented.json  20190128-162022.json  20190128-163535.json  20190129-045618.json  parseResults.py  presentation.tex
bencmark/: CMakeLists.txt  main.cpp
config/: config.json
src/: CMakeLists.txt  main.cpp
src/BodyGenerators/: BinaryBodyGenerator.cpp  BinaryBodyGenerator.hpp  CubeBodyGenerator.cpp  CubeBodyGenerator.hpp  SphereBodyGenerator.cpp  SphereBodyGenerator.hpp
src/barnes-hut/: BitShift.hpp  Node.cpp  Node.hpp  SFCIndex.cpp  SFCIndex.hpp  testSFCGen.cpp
src/barnes-hut/cpu-multi-thread/: Universe.cpp  Universe.hpp
src/barnes-hut/cpu-single-thread/: Universe.cpp  Universe.hpp
src/barnes-hut/opencl/: Node.cl  SFCIndex.cl  Universe.cpp  Universe.hpp
src/barnes-hut/opencl/sort/: merge_sort_on_gpu.hpp
src/barnes_hut/cpu-single-thread/: Universe.cpp  Universe.hpp
src/base/: BodyGenerator.hpp  ConcreteUniverseInclude.hpp  Exceptions.cpp  Exceptions.hpp  OpenCLBase.cpp  OpenCLBase.hpp  Universe.hpp  UniverseBuilder.cpp  UniverseBuilder.hpp  Util.hpp  Vec3.hpp  getConcreteUniverse.cpp  getConcreteUniverse.hpp
src/benchmark/: main.cpp
src/brute-force/cpu-multi-thread/: Universe.hpp
src/brute-force/cpu-single-thread/: Universe.cpp  Universe.hpp
src/brute-force/opencl/: Universe.hpp  UniverseKernel.cl
src/brute-force/openclloc/: Universe.hpp  UniverseKernel.cl
src/brute-force/openclvec/: Universe.cpp  Universe.hpp  UniverseKernel.cl
src/settings/: Settings.cpp  Settings.hpp
src/simulator/: Simulator.cpp  Simulator.hpp
test/: BarnesHutUniverseTest.cpp  BruteForceUniverseTest.cpp  CMakeLists.txt  Settings.cpp  SettingsTest.cpp  UniverseTest.cpp  main.cpp  testConfig.json
